# trashy-splashy

./: .gitignore  README.md
act_base_bringup/: CMakeLists.txt  package.xml
act_base_bringup/launch/: act_base.launch  act_keyboard_teleop.launch  act_ps3joy_teleop.launch  act_robot_base.launch
act_base_setup/: act_udev.py
act_drive/: CMakeLists.txt  package.xml
act_drive/msg/: Act_drive.msg  Act_feedback.msg
act_drive/scripts/: act_base_node.py  act_twist_keyboard.py  command.py  controller.py
act_drive/src/: act_joy_drive.cpp  ugv_to_drive.cpp
base_bringup/: CMakeLists.txt  package.xml
base_bringup/launch/: base.launch  joy_teleop.launch  robot_base.launch
base_drive/: CMakeLists.txt  package.xml
base_drive/msg/: Base_drive.msg
base_drive/scripts/: base_node.py  command.py  controller.py
base_drive/src/: joy_drive.cpp  twist_to_drive.cpp
cpg/: CMakeLists.txt  package.xml
cpg/include/: CPG.cpp  CPG.h  Joint.cpp  Joint.h  cpg_test.h
cpg/msg/: Fin_servos.msg  Servo.msg
cpg/src/: cpg_test.cpp
firmware/: platformio.ini
firmware/lib/CPG/: CPG.cpp  CPG.h  Joint.cpp  Joint.h
firmware/lib/Command/: Command.h
firmware/lib/Config/: Config.h
firmware/lib/Controller/: Fin.cpp  Fin.h
firmware/lib/Controller/example/: fin_cpg_test.cpp
firmware/lib/Controller/src/: Controller.cpp  Controller.h  Fin.cpp  Fin.h  PID.h
firmware/lib/IMU/examples/: imu_test.cpp
firmware/lib/IMU/src/: Razorimu.cpp  Razorimu.h
firmware/src/: main.cpp
imu_firmware/Arduino/Razor_AHRS/: Output.ino  Razor_AHRS.ino
imu_firmware/MPU9250_DMP_Orientation/: MPU9250_DMP_Orientation.ino
imu_firmware/Processing/Magnetometer_calibration/: magnetom.float
imu_firmware/Razor_AHRS_v3/: Razor_AHRS_v3.ino
joy/launch/: joy.launch.xml
steamcontroller/: setup.py
steamcontroller/python_steamcontroller.egg-info/: SOURCES.txt  requires.txt
steamcontroller/scripts/: sc-start.py
usb_cam/: package.xml
usb_cam/launch/: ball_tracking.launch  show_image.launch  usb_cam-test.launch
usb_cam/script/: trash_tracking.py
