<?xml version="1.0"?>
<package>
  <name>act_drive</name>
  <version>0.0.0</version>
  <description>Firmware and Serial communication for the Radar and the Encoder</description>
  <maintainer email="brian97cbn@gmail.com">brian97cbn</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rdr_ugv_control</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rdr_ugv_control</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
